Scheduling-with-node-affinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: Scheduling-with-node-affinity
spec:
  affinity:
    nodeAffinity: 
      requiredDuringSchedulingIgnoredDuringExecution: 
        nodeSelectorTerms:
        - matchExpressions:
          - key: env 
            operator: In 
            values:
            - prod
  containers:
  - name: with-node-affinity
    image: docker.io/ocpqe/hello-pod
