aws-storageclass-pod.yaml

apiVersion: v1
kind: Pod
metadata:
  name: aws-storageclass-pvc-pod
spec:
  volumes:
    - name: aws-storageclass-storage
      persistentVolumeClaim:
        claimName: aws-storageclass-pvc
  containers:
    - name: aws-storageclass-pvc-pod
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: aws-storageclass-storage
