test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    app: test-pod
  namespace: test-service
spec:
  containers:
  - image: nginx
    imagePullPolicy: Always
    name: test-pod
