test-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-service
  name: test-service
  namespace: test-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-world-pod
