sample-app-allow-to-hello.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: sample-app-allow-to-hello
spec:
  podSelector:
    matchLabels:
      deployment: hello
  ingress:
   - from:
     - namespaceSelector:
         matchLabels:
           name: network-test
       podSelector:
         matchLabels:
           deployment: sample-app
     ports:
     - port: 8080
       protocol: TCP
